# rust-ai-core

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benches/: core_ops.rs
examples/: device_selection.rs  dtype_utilities.rs  error_handling.rs  logging_setup.rs  memory_tracking.rs  traits_demo.rs
python/rust_ai_core_bindings/: __init__.py  __init__.pyi
src/: device.rs  dtype.rs  ecosystem.rs  error.rs  facade.rs  lib.rs  logging.rs  memory.rs  python.rs  traits.rs
src/cubecl/: interop.rs  mod.rs
src/typescript/: common.rs  mod.rs  napi.rs  wasm.rs
tests/: integration.rs
typescript/: README.md  package.json  tsconfig.json
typescript/src/: browser.ts  index.ts  node.ts  types.ts
