[package]
name = "rust-ai-core"
version = "0.2.1"
edition = "2021"
rust-version = "1.92"
license = "MIT"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "Shared core utilities for the rust-ai ecosystem: device selection, errors, traits, and CubeCL interop"
repository = "https://github.com/tzervas/rust-ai-core"
homepage = "https://github.com/tzervas/rust-ai-core"
documentation = "https://docs.rs/rust-ai-core"
keywords = ["machine-learning", "cuda", "gpu", "tensors", "deep-learning"]
categories = ["science", "mathematics", "development-tools"]

[lib]
crate-type = ["rlib", "cdylib"]
name = "rust_ai_core"

[dependencies]
candle-core = { version = "0.9.2", default-features = false }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
half = "2.7"

# CubeCL for GPU kernel support
cubecl = { version = "0.9", optional = true }
cubecl-cuda = { version = "0.9", optional = true }

# Python bindings (optional)
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
numpy = { version = "0.22", optional = true }

[dev-dependencies]
criterion = "0.8"
tokio = { version = "1.49", features = ["full"] }

[features]
default = []
cuda = ["candle-core/cuda", "dep:cubecl", "dep:cubecl-cuda"]
python = ["dep:pyo3", "dep:numpy"]

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"

[[example]]
name = "device_selection"
path = "examples/device_selection.rs"

[[example]]
name = "memory_tracking"
path = "examples/memory_tracking.rs"

[[example]]
name = "error_handling"
path = "examples/error_handling.rs"

[[bench]]
name = "core_ops"
harness = false
